--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 numpy==1.19.5
 pandas==1.1.5
-gurobipy==9.1.0
-torch==1.5.1+cu101
+torch==1.5.1
 torchvision==0.7.0
 matplotlib==3.3.3
 scikit-learn==0.23.2
