--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 numpy==1.19.5
 pandas==1.1.5
-torch==1.5.1
-torchvision==0.7.0
+torch==1.5.1+cu101
+gurobipy==9.1.0
 matplotlib==3.3.3
 scikit-learn==0.23.2
 xgboost==1.2.1
-optuna==1.3.1
+optuna==1.3.0
