--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 numpy==1.19.5
 pandas==1.1.5
-torch==1.5.1+cu101
-matplotlib==3.3.3
-scikit-learn==0.23.2
-xgboost==1.2.1
-optuna==1.3.0
+torch==1.7.1
+torchvision==0.8.2
+matplotlib==3.3.4
+scikit-learn==0.24.1
+sklearn==0.0
+xgboost==1.3.3
+optuna==2.5.0
 gurobipy==9.1.0
