--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,41 @@
-numpy==1.19.5
-pandas==1.1.5
+alembic==1.5.4
+attrs==20.3.0
+cliff==3.6.0
+cmaes==0.8.1
+cmd2==1.5.0
+colorama==0.4.4
+colorlog==4.7.2
+cycler==0.10.0
+importlib-metadata==3.4.0
+joblib==1.0.1
+kiwisolver==1.3.1
+Mako==1.1.4
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+numpy==1.20.1
+optuna==2.5.0
+packaging==20.9
+pandas==1.2.2
+pbr==5.5.1
+Pillow==8.1.0
+prettytable==0.7.2
+pyparsing==2.4.7
+pyperclip==1.8.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2021.1
+PyYAML==5.4.1
+scikit-learn==0.24.1
+scipy==1.6.0
+six==1.15.0
+sklearn==0.0
+SQLAlchemy==1.3.23
+stevedore==3.3.0
+threadpoolctl==2.1.0
 torch==1.7.1
 torchvision==0.8.2
-matplotlib==3.3.4
-scikit-learn==0.24.1
-sklearn==0.0
+tqdm==4.56.2
+typing-extensions==3.7.4.3
+wcwidth==0.2.5
 xgboost==1.3.3
-optuna==2.5.0
-gurobipy==9.1.1
+zipp==3.4.0
